--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/blog">Art</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:placeofmany@gmail.com">email</a></li>
+        		<li><a href="mailto:bleigh83@gmail.com">email</a></li>
         		<li><a href="https://github.com/velvetkitties">github.com/velvetkitties</a></li>
 			</ul>
 		</footer>
